 * units:
   * balancing changes:
     * increased the XP requirement of the Vampire Bat from 14 to 22
     * decreased the HP of the Vampire Bat from 17 to 16
 * user interface
   * the apple key works as shortcut modifier again (bug #10586)
   * made "Show lobby joins of friends only" the default preference
   * new menu option added to save replays manually
 * WML engine:
   * new tag [filter_vision] for Standard Unit Filter
   * it is now possible to play [sound] repeatedly using a "repeat" attribute
   * Added boolean variable disallow_observers= to side defination
   * Random factions can be defined on a subset of the non-random faction
    (FR #10600)
 * miscellaneous and bug fixes:
   * set the default resistance to 100 (no resistance) instead of 0 (immune)
     (bug #10661)
   * when loading a unit some traits didn't get applied correctly but got
     fixed in a later state. This could lead to some units not leveling 
     properly (bug #10304)
   * validate vector access for colours (bug #10622)
   * Fixed OOS on unit advancement if wml had battle/die events (bug #10590)
   * added serveral fixes to compile with Sun Studio compiler (patch #911)
   * bumped autoconf version requirement to 2.60 since it's needed for the
     boost tests (bug #10636)
   * fixed a problem where two [recall]s in a SP game could get an out of sync
     recruitment
   * avoid triggering an assertion when a duplicated side definition exists
     (bug #7252)
   * the previous "max-saves" slider is now used as a slider to determin the
     maximum number of auto-saves to keep, default value is 10, so the 11th
     oldest and all older auto-saves will be deleted
   * the MP server now always sends gzipped data
   * Rewrote the AI village assigning algorithm, instead of using brute force
     it now tries to optimize before resorting to brute force (bug #7215).

Version 1.3.13:
 * campaigns:
   * A Tale of Two Brothers: