@@ -549,6 +549,8 @@ void playsingle_controller::before_human_turn(bool save)
 	gui_->draw();
 	gui_->update_display();
 
+	statistics::reset_turn_stats(player_number_);
+
 	if (save) {
 		menu_handler_.autosave(gamestate_.label, status_.turn(), gamestate_.starting_pos);
 	}
